--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
             <h2>What Our Clients Say</h2>
             <div class="testimonials-slider">
                 <div class="testimonial-item">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="John Doe" class="testimonial-image">
+                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="JONATHAN" class="testimonial-image">
                     <p>"I've never experienced such outstanding service. 
                         The team exceeded my expectations in every way!"</p>
                     <h3>Niwagaba Jonathan</h3>
                     <p>CEO, Safer Tips.</p>
                 </div>
                 <div class="testimonial-item">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="Jane Smith" class="testimonial-image">
+                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="LAWRENCE" class="testimonial-image">
                     <p>"An absolute pleasure to work with. 
                         Their professionalism and dedication
                          were evident in every interaction."</p>
@@ -141,14 +141,14 @@
                     <p>Creative Director, Design Studio</p>
                 </div>
                 <div class="testimonial-item">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="Emily Johnson" class="testimonial-image">
+                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="SAVIOR" class="testimonial-image">
                     <p>"Highly recommended! Their attention to detail
                          and commitment to quality are unparalleled."</p>
                     <h3>Emily Johnson</h3>
                     <p>Marketing Manager, Business Co.</p>
                 </div>
                 <div class="testimonial-item">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="Michael Brown" class="testimonial-image">
+                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="Michael " class="testimonial-image">
                     <p>"Fantastic service and support throughout 
                         the entire project. 
                         They really know their stuff!"</p>
