--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p>"Fantastic service and support throughout 
                         the entire project. 
                         They really know their stuff!"</p>
-                    <h3>Michael Brown</h3>
+                    <h3>Michael </h3>
                     <p>IT Specialist, Tech Solutions</p>
                 </div>
             </div>
