--- a/work.Html
+++ b/work.Html
@@ -27,7 +27,7 @@
             <h2 id="project1">Project 1: SACCO Banking System</h2>
             <div class="project">
                 <div class="project-image-wrapper">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="SACCO Banking System" class="project-image">
+                    <img src="images/pictures/SACCO.png" alt="SACCO Banking System" class="project-image">
                 </div>
                 <div class="project-description">
                     <p>
@@ -52,7 +52,7 @@
             <h2 id="project2">Project 2: E-commerce Website</h2>
             <div class="project">
                 <div class="project-image-wrapper">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="E-commerce Website" class="project-image">
+                    <img src="images/pictures/ECOM.png" alt="E-commerce Website" class="project-image">
                 </div>
                 <div class="project-description">
                     <p>
@@ -81,37 +81,31 @@
             <h2 id="project3">Project 3: UWP Application for WhatsApp</h2>
             <div class="project">
                 <div class="project-image-wrapper">
-                    <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="UWP Application for WhatsApp" class="project-image">
+                    <img src="images/pictures/UWP Quiz Application.png" alt="UWP Quiz Application" class="project-image">
                 </div>
                 <div class="project-description">
                     <p>
-                        <strong>Overview:</strong> The UWP (Universal Windows Platform) Application for WhatsApp was 
-                        developed to bring the popular messaging service to Windows devices, offering a native app experience with full feature parity to the mobile version.
+                        <strong>Overview:</strong> The UWP (Universal Windows Platform) Quiz Application is designed to provide an engaging, educational, and interactive quiz experience on Windows devices. It offers users the ability to explore a diverse range of quizzes covering multiple topics and difficulty levels, making learning both fun and challenging.
                     </p>
                     <p>
                         <strong>Features:</strong>
                         <ul>
-                            <li><strong>Messaging:</strong> Allows users to send and receive messages, including text, 
-                                images, videos, and voice notes, with individual contacts or groups.</li>
-                            <li><strong>Voice and Video Calls:</strong> Supports high-quality voice and 
-                                video calls directly from the app, leveraging the device's hardware capabilities.</li>
-                            <li><strong>Notifications:</strong> Integrates with Windows notification system 
-                                to provide real-time updates on incoming messages and calls.</li>
-                            <li><strong>Contact Management:</strong> Syncs with the user's contact list to easily 
-                                add and manage contacts within the app.</li>
-                            <li><strong>Media Sharing:</strong> Users can share media files, including documents, 
-                                images, and videos, directly from their device's storage.</li>
-                            <li><strong>Customization:</strong> Offers customization options such as themes, 
-                                wallpapers, and notification settings to personalize the user experience.</li>
+                            <li><strong>Quiz Creation:</strong> This feature allows users to create personalized quizzes, selecting from a range of question types such as multiple choice, true/false, and short answer. Users can also set the difficulty level and categorize questions to tailor the quiz to specific audiences.</li>
+                            <li><strong>Variety of Quizzes:</strong> The application comes pre-loaded with an extensive library of quizzes on various subjects including history, science, literature, sports, and more. This ensures that users have access to a broad spectrum of knowledge areas right from the start.</li>
+                            <li><strong>Interactive Interface:</strong> The application features an intuitive and interactive interface that makes answering questions enjoyable. Users receive immediate feedback on their answers along with detailed explanations, helping them understand the material better.</li>
+                            <li><strong>Scoring and Leaderboards:</strong> Users can track their scores and see how they rank on global leaderboards. This competitive element motivates users to improve their scores and achieve higher rankings.</li>
+                            <li><strong>Progress Tracking:</strong> The application monitors user progress over time, providing insights into their performance. This includes detailed analytics on strengths and weaknesses, enabling users to focus on areas that need improvement.</li>
+                            <li><strong>Customizable Settings:</strong> Users can personalize their quiz experience by customizing settings such as themes, timer options, and notification preferences. This allows for a more tailored and enjoyable user experience.</li>
+                            <li><strong>Offline Access:</strong> The application supports offline access, enabling users to download quizzes and play them without an internet connection. This is particularly useful for users who want to study or have fun while on the go.</li>
+                            <li><strong>Multiplayer Mode:</strong> A multiplayer mode allows users to challenge friends and family to quizzes, making it a social and interactive way to learn and compete.</li>
                         </ul>
                     </p>
                     <p>
-                        <strong>Impact:</strong> The UWP Application for WhatsApp has made it easier for Windows users 
-                        to stay connected with their contacts through a native app experience. 
-                        It has improved accessibility and convenience, allowing users to communicate seamlessly across multiple devices.
+                        <strong>Impact:</strong> The UWP Quiz Application has significantly enhanced the learning experience for Windows users by making knowledge acquisition both enjoyable and interactive. It provides a valuable educational tool for students, teachers, and anyone looking to test their knowledge or learn new facts. With its user-friendly design and wide array of features, the application has become a popular choice for both casual and serious learners. By offering a platform that encourages continuous learning and friendly competition, the UWP Quiz Application helps foster a lifelong love of learning.
                     </p>
                 </div>
             </div>
+            
         </div>
     </section>
 
