--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             <div class="social-links">
                 <a href="https://wa.me/256768432509" class="social-icon" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                <a href="https://linkedin.com/Mugisha Micheal" class="social-icon"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Micjeal" class="social-icon"><i class="fab fa-github" ></i></a>
                 <a href="https://twitter.com/yourusername/" class="social-icon"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/mykomugisha/" class="social-icon"><i class="fab fa-instagram"></i></a>
