--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                     <p>"An absolute pleasure to work with. 
                         Their professionalism and dedication
                          were evident in every interaction."</p>
-                    <h3>Jane Smith</h3>
+                    <h3>Micheal</h3>
                     <p>Creative Director, Design Studio</p>
                 </div>
                 <div class="testimonial-item">
                     <img src="images/pictures/IMG-20210608-WA0032.jpg" alt="Emily Johnson" class="testimonial-image">
                     <p>"Highly recommended! Their attention to detail
                          and commitment to quality are unparalleled."</p>
-                    <h3>Emily Johnson</h3>
+                    <h3>micheal</h3>
                     <p>Marketing Manager, Business Co.</p>
                 </div>
                 <div class="testimonial-item">
@@ -152,7 +152,7 @@
                     <p>"Fantastic service and support throughout 
                         the entire project. 
                         They really know their stuff!"</p>
-                    <h3>Michael Brown</h3>
+                    <h3>Micheal</h3>
                     <p>IT Specialist, Tech Solutions</p>
                 </div>
             </div>
